name:
  blockapps-fast-ecrecover-tests
version:
  0.1
copyright:
  2016, Blockapps
build-type:
  Simple
cabal-version:
  >=1.10

source-repository head
  type:
    git
  location:
    https://github.com/blockapps/fast-ecrecover-tests

executable blockapps-fast-ecrecover-tests
  hs-source-dirs:
    tests
  main-is:
    Main.hs
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  build-depends:
    -- 
    fast-ecrecover,
    haskoin,
    ethereum-encryption,
    ethereum-rlp,
    blockapps-data,
    blockapps-util,
    -- 
    tasty < 0.12,
    tasty-hunit < 0.10,
    -- basics:
    rebase < 2

